--- a/server-side/server-side/Views/Shared/_Layout.cshtml
+++ b/server-side/server-side/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="nav navbar-nav navbar-default">
-                        <li role="presentation">@Html.ActionLink("Home", "home", "home")</li>
+                        @*<li role="presentation">@Html.ActionLink("Home", "home", "home")</li>*@
                         <li role="presentation">@Html.ActionLink("Books", "books", "Books")</li>
                         <li role="presentation">@Html.ActionLink("Authors", "authors", "Authors")</li>
                         <li role="presentation">@Html.ActionLink("Administrators", "administrator", "Administrator")</li>
