Min fina ändring

--- a/server-side/server-side/Views/Administrator/administrator.cshtml
+++ b/server-side/server-side/Views/Administrator/administrator.cshtml
@@ -6,3 +6,20 @@
 
 <h2>administrator</h2>
 
+<div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Panel heading</div>
+    <div class="panel-body">
+        <p># hejsan             jadå</p>
+    </div>
+    <!-- Table -->
+    <table class="table">
+        @*@foreach (var obj in Model)
+        {
+
+          
+                @obj.name
+           
+        }*@
+    </table>
+</div>>
