--- a/server-side/server-side/Views/Administrator/administrator.cshtml
+++ b/server-side/server-side/Views/Administrator/administrator.cshtml
@@ -8,18 +8,38 @@
 
 <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading">Panel heading</div>
-    <div class="panel-body">
-        <p># hejsan             jadå</p>
-    </div>
+    <div class="panel-heading">Administrators</div>
+    @*<div class="panel-body">
+        <p># hejsan </p>
+    </div>*@
     <!-- Table -->
     <table class="table">
-        @*@foreach (var obj in Model)
-        {
 
-          
-                @obj.name
-           
-        }*@
+
+        <thead>
+            <tr>
+               
+                <th>F</th>
+                <th>5</th>
+                <th>4</th>
+            </tr>
+        </thead>
+
+
+
+        <tbody>
+            @foreach (service.Models.Books books in service.Models.Books.getBookList())
+            {
+
+
+                <tr>
+                    <td>@books._title</td>
+                    <td>@books._publicationInfo</td>
+                    <td>@books._ISBN</td>
+
+                </tr>
+            }
+        </tbody>
+
     </table>
 </div>
