--- a/server-side/server-side/Views/Authors/authors.cshtml
+++ b/server-side/server-side/Views/Authors/authors.cshtml
@@ -14,12 +14,30 @@
     </div>
     <!-- Table -->
     <table class="table">
-        @*@foreach (var obj in Model)
-        {
+        <thead>
+            <tr>
 
-            
-                @obj.name
-            
-        }*@
+                <th>Title</th>
+                <th>Author</th>
+                <th>ISBN</th>
+            </tr>
+        </thead>
+
+
+
+        <tbody>
+            @foreach (service.Models.Books books in service.Models.Books.getBookList())
+            {
+
+
+                <tr>
+                    <td>@books._title</td>
+                    <td>@books._publicationInfo</td>
+                    <td>@books._ISBN</td>
+
+                </tr>
+            }
+        </tbody>
+
     </table>
 </div>
