--- a/server-side/server-side/Views/Authors/authors.cshtml
+++ b/server-side/server-side/Views/Authors/authors.cshtml
@@ -4,37 +4,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>authors</h2>
+
 
 <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading">Panel heading</div>
-    <div class="panel-body">
-        <p># hejsan             jadå</p>
-    </div>
+    <div class="panel-heading">Författare</div>
+    
     <!-- Table -->
     <table class="table">
         <thead>
             <tr>
 
-                <th>Title</th>
-                <th>Author</th>
-                <th>ISBN</th>
-            </tr>
+                <th>Förnamn</th>
+                <th>Efternamn</th>
+                <th>Födelseår</th>
+                
+             </tr>
         </thead>
 
 
 
         <tbody>
-            @foreach (service.Models.Books books in service.Models.Books.getBookList())
+            @foreach (service.Models.Author author in service.Models.Author.getAuthorList())
             {
 
 
                 <tr>
-                    <td>@books._title</td>
-                    <td>@books._publicationInfo</td>
-                    <td>@books._ISBN</td>
-
+                    <td>@author._firstName</td>
+                    <td>@author._lastName</td>
+                    <td>@author._birthYear</td>
+                    
                 </tr>
             }
         </tbody>
