--- a/server-side/server-side/Views/Shared/_Layout.cshtml
+++ b/server-side/server-side/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 
 <div class="jumbotron">
     <div class="jumbotrondiv">
-        <h1>Jönköping bibliotek</h1>
+        <h1>Jönköping Library</h1>
     </div>
 </div>
 
@@ -39,9 +39,9 @@
                 <form class="navbar-nav" role="search">
 
                     <div class="col-lg-12 input-group add-on">
-                        <input class="form-control input-lg" placeholdewr="Search" name="srch-term" id="srch-term" type="text">
+                        <input class="form-control input-lg" placeholder="Search" name="srch-term" id="srch-term" type="text">
                         <div class="input-group-btn">
-                            <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            <button id="searchButton" class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
                     </div>
 
