--- a/server-side/server-side/Content/index.css
+++ b/server-side/server-side/Content/index.css
@@ -1,7 +1,6 @@
 ﻿body {
    
-
-
+    
 }
 
 .jumbotron{
@@ -12,13 +11,27 @@
     text-align: center;
     font-size: 100px;
     background-color: goldenrod;
-   font-family: 'Nunito', sans-serif;
-
+    font-family: 'Nunito', sans-serif;
+   
 
 }
 #panelHeading{
 
 
-    background-color: goldenrod;
+    background-color: #a7a3a3;
                
+}
+#searchButton{
+
+
+    height: 46px;
+    background-color: #a7a3a3;
+
+}
+.logInContainer{
+
+    background-color: #4cff00;
+    height: 10%;
+    width: 20%;
+    margin-left: 35%;
 }
