--- a/server-side/server-side/Views/LogIn/logIn.cshtml
+++ b/server-side/server-side/Views/LogIn/logIn.cshtml
@@ -2,7 +2,47 @@
 @{
     ViewBag.Title = "logIn";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    
 }
+<link rel="stylesheet" href="~/Content/style.css">
+<script src="~/scripts/index.js"></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-<h2>logIn</h2>
+
+    <ul class="bg-bubbles">
+
+
+        <li></li>
+        <li></li>
+        <li></li>
+
+        <li></li>
+        <li></li>
+        <li></li>
+
+        <li></li>
+        <li></li>
+
+        <li></li>
+        <li></li>
+
+
+    </ul>
+
+<div class="logInContainer">
+
+    <div class="input-group input-group-lg">
+        <span class="input-group-addon" id="sizing-addon1"></span>
+        <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+    </div>
+    <div class="input-group input-group-lg">
+        <span class="input-group-addon" id="sizing-addon1"></span>
+        <input type="text" class="form-control" placeholder="Password" aria-describedby="sizing-addon1">
+    </div>
+
+</div>
+
+    
+
+    
 
