En ny login-form

--- a/server-side/server-side/Content/index.css
+++ b/server-side/server-side/Content/index.css
@@ -30,7 +30,7 @@
 }
 .logInContainer{
 
-    background-color: #4cff00;
+    /*background-color: #4cff00;*/
     height: 10%;
     width: 20%;
     margin-left: 35%;
