--- a/server-side/server-side/Views/LogIn/logIn.cshtml
+++ b/server-side/server-side/Views/LogIn/logIn.cshtml
@@ -4,44 +4,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     
 }
-<link rel="stylesheet" href="~/Content/style.css">
-<script src="~/scripts/index.js"></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-
-    <ul class="bg-bubbles">
-
-
-        <li></li>
-        <li></li>
-        <li></li>
-
-        <li></li>
-        <li></li>
-        <li></li>
-
-        <li></li>
-        <li></li>
-
-        <li></li>
-        <li></li>
-
-
-    </ul>
-
-<div class="logInContainer">
-
-    <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1"></span>
-        <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+<div class="container">
+    <div class="row vertical-offset-100">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Logga in</h3>
+                </div>
+                <div class="panel-body">
+                    <form accept-charset="UTF-8" role="form">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Användarnamn" name="email" type="text">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Lösenord" name="password" type="password" value="">
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input name="remember" type="checkbox" value="Remember Me"> Kom ihåg mig
+                                </label>
+                            </div>
+                            <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1"></span>
-        <input type="text" class="form-control" placeholder="Password" aria-describedby="sizing-addon1">
-    </div>
-
 </div>
-
     
 
     
