--- a/server-side/server-side/Views/Books/books.cshtml
+++ b/server-side/server-side/Views/Books/books.cshtml
@@ -1,10 +1,10 @@
-﻿<link href="~/content/index.css" rel="stylesheet" />
+﻿
 
 @{
     ViewBag.Title = "books";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link href="~/content/index.css" rel="stylesheet" />
 
 
 
@@ -12,7 +12,7 @@
     <!-- Default panel contents -->
     <div id="panelHeading" class="panel-heading">Books</div>
     <!-- Table -->
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Title</th>
@@ -22,20 +22,26 @@
                 <th>ISBN</th>
             </tr>
         </thead>
-
-
+        @*@Url.Action("authors", "Authors")*@
+       
         <tbody>
-            @foreach (service.Models.Books books in service.Models.Books.getBookList())
-            {
-                <tr>
-                    <td>@books._title</td>
-                    <td>@books._publicationInfo</td>
-                    <td>@books._ISBN</td>
-                    <td>@books._publicationYear</td>
-                    <td>@books._publicationYear</td>
-                </tr>
-            }
-        </tbody>
+            
+                @foreach (service.Models.Books books in service.Models.Books.getBookList())
+                {
+
+                    <tr class="clickable-row" onclick="document.location = '@Url.Action("bookDetails", "Books", new {isbn = @books._ISBN})'">
+                        <td>@books._title</td>
+                        <td>@books._publicationInfo</td>
+                        <td>@books._pages</td>
+                        <td>@books._publicationYear</td>
+                        <td>@books._publicationYear</td>
+
+                    </tr>
+                    
+                }
+           
+
+                </tbody>
 
     </table>
 </div>
