--- a/server-side/server-side/Views/Authors/authors.cshtml
+++ b/server-side/server-side/Views/Authors/authors.cshtml
@@ -3,15 +3,14 @@
     ViewBag.Title = "authors";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
+<link href="~/Content/index.css" rel="stylesheet" />
 
 <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading">Författare</div>
+    <div class="panel-heading" id="panelHeading">Författare</div>
     
     <!-- Table -->
-    <table class="table table-hover">
+    <table  class="table table-hover">
         <thead>
             <tr>
 
