--- a/server-side/server-side/Views/Authors/authors.cshtml
+++ b/server-side/server-side/Views/Authors/authors.cshtml
@@ -21,7 +21,7 @@
                 
              </tr>
         </thead>
-
+        
 
 
         <tbody>
@@ -29,7 +29,7 @@
             {
 
 
-                <tr>
+                <tr class="clickable-row" onclick="document.location = '@Url.Action("authorDetails", "Author", new {isbn = @author._aId})'">
                     <td>@author._firstName</td>
                     <td>@author._lastName</td>
                     <td>@author._birthYear</td>
