Läser in från databasen nu

--- a/server-side/Views/Books/bookDetails.cshtml
+++ b/server-side/Views/Books/bookDetails.cshtml
@@ -18,6 +18,8 @@
                         <small>Year: @books._publicationYear</small>
                         <br />
                         <small>ISBN: @books._ISBN</small>
+                        <br />
+                        <small>Pages: @books._pages</small>
                     </div>
                 </div>
             </div>
