--- a/server-side/Views/Books/books.cshtml
+++ b/server-side/Views/Books/books.cshtml
@@ -34,7 +34,7 @@
                         <td>@books._publicationInfo</td>
                         <td>@books._pages</td>
                         <td>@books._publicationYear</td>
-                        <td>@books._publicationYear</td>
+                        <td>@books._ISBN</td>
 
                     </tr>
                     
