Nu har vi en fungerande sökfunktion

--- a/server-side/Views/Books/bookDetails.cshtml
+++ b/server-side/Views/Books/bookDetails.cshtml
@@ -1,31 +1,28 @@
-﻿@{ 
+﻿
+@model service.Models.Books
+
+@{ 
     ViewBag.Title = "bookDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-
-@foreach (service.Models.Books books in service.Models.Books.getBookList())
-{
-    if (books._ISBN == @ViewBag.isbn)
-    {
+   
         
-            <div class="panel-group">
-                <div class="panel panel-default">
-                    <div class="panel-heading">@books._title</div>
-                    <div class="panel-body">
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">@Model._title</div>
+                <div class="panel-body">
 
-                        <small>Year: @books._publicationYear</small>
-                        <br />
-                        <small>ISBN: @books._ISBN</small>
-                        <br />
-                        <small>Pages: @books._pages</small>
-                    </div>
+                    <small>Year: @Model._publicationYear</small>
+                    <br />
+                    <small>ISBN: @Model._ISBN</small>
+                    <br />
+                    <small>Pages: @Model._pages</small>
                 </div>
             </div>
+        </div>
        
 
-    }
+    
 
 
-}
