--- a/server-side/Views/Books/books.cshtml
+++ b/server-side/Views/Books/books.cshtml
@@ -20,7 +20,6 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>Pages</th>
-                <th>Publication year</th>
                 <th>ISBN</th>
             </tr>
         </thead>
@@ -35,7 +34,7 @@
                         <td>@books._title</td>      
                         <td>@books._publicationInfo</td>
                         <td>@books._pages</td>
-                        <td>@books._publicationYear</td>
+                        
                         <td>@books._ISBN</td>
 
                     </tr>
@@ -45,5 +44,8 @@
 
                 </tbody>
 
+
     </table>
+       
 </div>
+@Html.PagedListPager(Model, page => Url.Action("books", new { page, Search = Request.QueryString["Search"] }))
