--- a/server-side/Views/Books/books.cshtml
+++ b/server-side/Views/Books/books.cshtml
@@ -48,4 +48,8 @@
     </table>
        
 </div>
-@Html.PagedListPager(Model, page => Url.Action("books", new { page, Search = Request.QueryString["Search"] }))
+<div class="col-md-12">
+    <a id="createButton" class="glyphicon glyphicon-plus btn btn-sm btn-default pull-right" href='@Url.Action("createBook", "Books")'></a>
+    @Html.PagedListPager(Model, page => Url.Action("books", new { page, Search = Request.QueryString["Search"] }))
+    
+</div>
