--- a/server-side/Views/Authors/authors.cshtml
+++ b/server-side/Views/Authors/authors.cshtml
@@ -9,7 +9,25 @@
 
 <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="panelHeading">Författare</div>
+    <div class="panel-heading" id="panelHeading">@using (Html.BeginForm("authors", "Authors", FormMethod.Get))
+            {
+        <div class="row">
+
+
+            <form class="navbar-nav" role="search">
+
+                <div class="col-lg-12 input-group add-on">
+
+                    @Html.TextBox("Search", null, new { @class = "form-control input-lg", @placeholder = "Search", @type = "text" })
+                    <div class="input-group-btn">
+                        <button id="searchButton" class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+    }</div>
     
     <!-- Table -->
     <table  class="table table-hover">
