--- a/server-side/Views/Books/books.cshtml
+++ b/server-side/Views/Books/books.cshtml
@@ -12,7 +12,25 @@
 
     <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div id="panelHeading" class="panel-heading">Books</div>
+    <div id="panelHeading" class="panel-heading">@using (Html.BeginForm("books", "Books", FormMethod.Get))
+            {
+        <div class="row">
+
+
+            
+
+                <div class="col-lg-12 input-group add-on">
+
+                    @Html.TextBox("Search", null, new { @class = "form-control input-lg", @placeholder = "Search", @type = "text" })
+                    <div class="input-group-btn">
+                        <button id="searchButton" class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+
+            
+
+        </div>
+    }</div>
     <!-- Table -->
     <table class="table table-hover">
         <thead>
