--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -1,5 +1,28 @@
-﻿
+﻿@model service.Models.Books
 
 
 <h2>editBook</h2>
 
+<form>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Titel of book </label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="@Model._title">
+        
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-group">
+        <label for="exampleSelect1">Example select</label>
+        <select class="form-control" id="exampleSelect1">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+    </div>
+   
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
