--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -5,13 +5,21 @@
 
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Titel of book </label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="@Model._title">
+        <label for="exampleInputEmail1">Titel of book: @Model._title</label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
         
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label>
+            Author(s):
+            @foreach (var author in Model.AUTHORS)
+            {
+                <small>[@author._lastName, @author._firstName]</small>
+            }
+        </label>
+            <label for="exampleInputPassword1"></label>
+        
+        <input type="text" class="form-control" id="exampleInputPassword1"   placeholder = "Enter text">
     </div>
     <div class="form-group">
         <label for="exampleSelect1">Example select</label>
