--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -2,10 +2,11 @@
 
 
 <h2>editBook</h2>
-
+@using (Html.BeginForm("addBook", "Books", FormMethod.Get))
+{
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Titel of book: @Model._title</label>
+        <label for="exampleInputEmail1">Titel of book: <small>@Model._title</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
         
     </div>
@@ -22,15 +23,26 @@
         <input type="text" class="form-control" id="exampleInputPassword1"   placeholder = "Enter text">
     </div>
     <div class="form-group">
-        <label for="exampleSelect1">Example select</label>
-        <select class="form-control" id="exampleSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
+        <label>ISBN: <small>@Model._ISBN</small></label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+        
+    </div>
+    <div class="form-group">
+        <label>Publication year: <small>@Model._publicationYear</small></label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+
+    </div>
+    <div class="form-group">
+        <label>Publication info: <small>@Model._publicationInfo</small></label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+
+    </div>
+    <div class="form-group">
+        <label>Pages: <small>@Model._pages</small></label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+
     </div>
    
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+}
