--- a/server-side/Views/Books/bookDetails.cshtml
+++ b/server-side/Views/Books/bookDetails.cshtml
@@ -25,7 +25,7 @@
                     <small>@authors._firstName, @authors._lastName</small>
                     }
                     <div class="col-md-12">
-                        <a id="editButton" class="glyphicon glyphicon-cog btn btn-sm btn-default pull-right" href='@Url.Action("editBook", "Books", new {isbn = @Model.book._ISBN})'></a>
+                        <a id="editButton" class="glyphicon glyphicon-cog btn btn-sm btn-default pull-right" href='@Url.Action("showEditView", "Books", new {isbn = @Model.book._ISBN})'></a>
                         
                     </div>
                 </div>
