--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -1,8 +1,12 @@
 ﻿@model service.Models.Books
-
+<script>
+    $("addDiv").click(function () {
+        $("authorDiv").clone().appendTo("body");
+    });
+</script>
 
 <h2>editBook</h2>
-@using (Html.BeginForm("addBook", "Books", FormMethod.Get))
+@using (Html.BeginForm("editBook", "Books", FormMethod.Get))
 {
 <form>
     <div class="form-group">
@@ -11,35 +15,52 @@
         
     </div>
     <div class="form-group">
-        <label>
-            Author(s):
-            @foreach (var author in Model.AUTHORS)
-            {
-                <small>[@author._lastName, @author._firstName]</small>
-            }
-        </label>
-            <label for="exampleInputPassword1"></label>
         
-        <input type="text" class="form-control" id="exampleInputPassword1"   placeholder = "Enter text">
+            <label>
+                Author(s):
+                @foreach (var author in Model.AUTHORS)
+                {
+                    <small>[@author._lastName, @author._firstName]</small>
+                }
+            </label>
+        
+            <label for="exampleInputPassword1"></label>
+        <div id="authorDiv">
+            <select class="form-control">
+                @foreach (var author in Model.AUTHORS)
+                {
+
+
+                    <option value="aID">@author._firstName @author._lastName</option>
+                }
+            </select>
+                <button id="addDiv" class="glyphicon glyphicon-plus" ></button>
+
+        </div>
     </div>
     <div class="form-group">
         <label>ISBN: <small>@Model._ISBN</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="ISBN">
         
     </div>
     <div class="form-group">
         <label>Publication year: <small>@Model._publicationYear</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="publicationYear">
 
     </div>
     <div class="form-group">
         <label>Publication info: <small>@Model._publicationInfo</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="publicationInfo">
 
     </div>
     <div class="form-group">
         <label>Pages: <small>@Model._pages</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="pages">
+
+    </div>
+    <div class="form-group">
+        <label>Classification: <small>@Model.CLASSIFICATION._signum</small></label>
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="pages">
 
     </div>
    
