--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -1,9 +1,5 @@
 ﻿@model service.Models.Books
-<script>
-    $("addDiv").click(function () {
-        $("authorDiv").clone().appendTo("body");
-    });
-</script>
+
 
 <h2>editBook</h2>
 @using (Html.BeginForm("editBook", "Books", FormMethod.Get))
@@ -26,7 +22,7 @@
         
             <label for="exampleInputPassword1"></label>
         <div id="authorDiv">
-            <select class="form-control">
+            <select class="form-control" id="authorSelect">
                 @foreach (var author in Model.AUTHORS)
                 {
 
@@ -34,9 +30,10 @@
                     <option value="aID">@author._firstName @author._lastName</option>
                 }
             </select>
-                <button id="addDiv" class="glyphicon glyphicon-plus" ></button>
+                
 
         </div>
+        <button  id="addDiv"  class="glyphicon glyphicon-plus" type="button"></button>
     </div>
     <div class="form-group">
         <label>ISBN: <small>@Model._ISBN</small></label>
@@ -67,3 +64,13 @@
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 }
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        console.log("ready!");
+        $("#addDiv").click(function () {
+            $('#authorSelect').clone().appendTo("#authorDiv");
+        });
+
+    });
+    </script>
