--- a/server-side/Views/Books/createBook.cshtml
+++ b/server-side/Views/Books/createBook.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model List<service.Models.Author>
+@model service.Models.viewModel
 
 @{
     ViewBag.Title = "createBook";
@@ -7,42 +7,50 @@
 }
 
 <h2>Create Book</h2>
+@using (Html.BeginForm("createBook", "Books", FormMethod.Get))
+{
+<form>
+    <div class="form-group">
+        <label for="usr">Title:</label>
+        <input type="text" class="form-control" id="usr" name="title">
+    </div>
+    <div class="form-group">
+        <label for="sel1">Select author:</label>
+        <select class="form-control" id="sel1" name="aID">
+            @foreach (var authors in Model.authorList)
+            {
+                <option value="@authors._aId">@authors._firstName, @authors._lastName</option>
+            }
 
-<div class="form-group">
-    <label for="usr">Title:</label>
-    <input type="text" class="form-control" id="usr">
-</div>
-<div class="form-group">
-    <label for="sel1">Select author:</label>
-    <select class="form-control" id="sel1">
-        @foreach (var authors in Model)
-        {
-            <option>@authors._firstName, @authors._lastName</option>
-        }
-
-    </select>
-</div>
-<div class="form-group">
-    <label for="usr">Publication year:</label>
-    <input type="text" class="form-control" id="usr">
-</div>
-<div class="form-group">
-    <label for="usr">Sign Id:</label>
-    <input type="text" class="form-control" id="usr">
-</div>
-<div class="form-group">
-    <label for="usr">Isbn:</label>
-    <input type="text" class="form-control" id="usr">
-</div>
-<div class="form-group">
-    <label for="usr">Paged:</label>
-    <input type="text" class="form-control" id="usr">
-</div>
-<div class="form-group">
-    <label for="comment">Publication info</label>
-    <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
-<div class="col-md-12">
-    <a id="createButton" class="glyphicon glyphicon-plus btn btn-sm btn-default pull-right">Add</a>
-</div>
-
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="usr">Publication year:</label>
+        <input type="text" class="form-control" id="" name="publicationYear">
+    </div>
+    <div class="form-group">
+        <label for="usr">Sign Id:</label>
+        <select class="form-control" name="signId">
+            @foreach (var classi in Model.classificationList)
+            {
+                <option value="@classi._signId">@classi._signum</option>
+            }
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="usr">Isbn:</label>
+        <input type="text" class="form-control" id="usr" name="isbn">
+    </div>
+    <div class="form-group">
+        <label for="usr">Paged:</label>
+        <input type="text" class="form-control" id="usr" name="pages">
+    </div>
+    <div class="form-group">
+        <label for="comment">Publication info</label>
+        <textarea class="form-control" rows="5" id="comment" name="publicationInfo"></textarea>
+    </div>
+    <div class="col-md-12">
+        <button id="createButton" class="glyphicon glyphicon-plus btn btn-sm btn-default pull-right" type="submit">Add</button>
+    </div>
+</form>
+}
