--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -7,7 +7,7 @@
 <form>
     <div class="form-group">
         <label for="exampleInputEmail1">Titel of book: <small>@Model.book._title</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="title">
         
     </div>
     <div class="form-group">
@@ -57,7 +57,7 @@
     </div>
     <div class="form-group">
         <label>Classification: <small>@Model.book.CLASSIFICATION._signum</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="pages">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="signum">
 
     </div>
    
