--- a/server-side/Views/Books/books.cshtml
+++ b/server-side/Views/Books/books.cshtml
@@ -48,12 +48,12 @@
                 @foreach (var books in Model)
                 {
 
-                    <tr class="clickable-row" onclick="document.location = '@Url.Action("bookDetails", "Books", new {isbn = @books._ISBN})'">
-                        <td>@books._title</td>      
-                        <td>@books._publicationInfo</td>
-                        <td>@books._pages</td>
+                    <tr class="clickable-row" onclick="document.location = '@Url.Action("bookDetails", "Books", new {isbn = @books.ISBN})'">
+                        <td>@books.Title</td>      
+                        <td>@books.PublicationInfo</td>
+                        <td>@books.pages</td>
                         
-                        <td>@books._ISBN</td>
+                        <td>@books.ISBN</td>
 
                     </tr>
                     
