--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -6,7 +6,7 @@
 {
 <form>
     <div class="form-group">
-        <label for="exampleInputEmail1">Titel of book: <small>@Model.book._title</small></label>
+        <label for="exampleInputEmail1">Titel of book: <small>@Model.book.Title</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="title">
         
     </div>
@@ -16,7 +16,7 @@
                 Author(s):
                 @foreach (var author in Model.book.AUTHORS)
                 {
-                    <small>[@author._lastName, @author._firstName]</small>
+                    <small>[@author.LastName, @author.FirstName]</small>
                 }
             </label>
         
@@ -27,7 +27,7 @@
                 {
 
 
-                    <option value="aID">@author._firstName @author._lastName</option>
+                    <option value="aID">@author.FirstName @author.LastName</option>
                 }
             </select>
                 
@@ -36,27 +36,27 @@
         <button  id="addDiv"  class="glyphicon glyphicon-plus" type="button"></button>
     </div>
     <div class="form-group">
-        <label>ISBN: <small>@Model.book._ISBN</small></label>
+        <label>ISBN: <small>@Model.book.ISBN</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="ISBN">
         
     </div>
     <div class="form-group">
-        <label>Publication year: <small>@Model.book._publicationYear</small></label>
+        <label>Publication year: <small>@Model.book.PublicationYear</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="publicationYear">
 
     </div>
     <div class="form-group">
-        <label>Publication info: <small>@Model.book._publicationInfo</small></label>
+        <label>Publication info: <small>@Model.book.PublicationInfo</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="publicationInfo">
 
     </div>
     <div class="form-group">
-        <label>Pages: <small>@Model.book._pages</small></label>
+        <label>Pages: <small>@Model.book.pages</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="pages">
 
     </div>
     <div class="form-group">
-        <label>Classification: <small>@Model.book.CLASSIFICATION._signum</small></label>
+        <label>Classification: <small>@Model.book.CLASSIFICATION.Signum</small></label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="signum">
 
     </div>
