--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -57,7 +57,7 @@
     </div>
     <div class="form-group">
         <label>Classification: <small>@Model.book.CLASSIFICATION.Signum</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="signum">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="signId">
 
     </div>
    
