--- a/server-side/Views/Shared/_Layout.cshtml
+++ b/server-side/Views/Shared/_Layout.cshtml
@@ -2,6 +2,9 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="~/Content/index.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 
 
 <div class="jumbotron">
