--- a/server-side/Views/Books/editBook.cshtml
+++ b/server-side/Views/Books/editBook.cshtml
@@ -23,13 +23,13 @@
         
             <label for="exampleInputPassword1"></label>
         <div id="authorDiv">
-            <select class="form-control" id="authorSelect">
+            <select class="form-control" name="aID">
                 @foreach (var author in Model.authorList)
                 {
 
 
 
-                    <option value="aID">@author.FirstName @author.LastName</option>
+                    <option value="@author.Aid">@author.FirstName @author.LastName</option>
 
                 }
             </select>
@@ -60,8 +60,17 @@
     </div>
     <div class="form-group">
         <label>Classification: <small>@Model.book.CLASSIFICATION.Signum</small></label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter text" name="signId">
+        <select class="form-control" name="signId">
+            @foreach (var signum in Model.classificationList)
+                {
+                <option value="@signum.SignId">@signum.Signum</option>
+                }
+        </select>
 
+    </div>
+    <div class="form-group">
+        <label for="comment">Publication info</label>
+        <textarea class="form-control" rows="5" id="comment" name="publicationInfo"></textarea>
     </div>
    
     <button type="submit" class="btn btn-primary">Submit</button>
