--- a/server-side/Views/Books/createBook.cshtml
+++ b/server-side/Views/Books/createBook.cshtml
@@ -19,11 +19,11 @@
     <label for="sel1">Select author:</label>
 
     <div id="authorDiv">
-        <select class="form-control" id="authorSelect">
+        <select class="form-control" name="aID">
             @foreach (var author in Model.authorList)
             {
 
-                <option value="aID">@author.FirstName @author.LastName</option>
+                <option value="@author.Aid">@author.FirstName @author.LastName</option>
             }
         </select>
     </div>
