Nu kan vi redigera författare

--- a/server-side/Views/Books/bookDetails.cshtml
+++ b/server-side/Views/Books/bookDetails.cshtml
@@ -22,7 +22,7 @@
                     <small>Authors: </small>
                     @foreach (var authors in Model.authorList)
                     {
-                        <a href='@Url.Action("authorDetails", "Authors", new { authorId = authors.Aid })'>@authors.FirstName @authors.LastName</a>
+                        <a href='@Url.Action("authorDetails", "Authors", new { authorId = authors.Aid })'>@authors.FirstName @authors.LastName |</a>
                         
                         
                     }
