Sökfunktion för authors och att lägga till en author funkar nu

--- a/server-side/Views/Authors/authors.cshtml
+++ b/server-side/Views/Authors/authors.cshtml
@@ -9,7 +9,7 @@
 
 <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="panelHeading">@using (Html.BeginForm("authors", "Authors", FormMethod.Get))
+    <div class="panel-heading" id="panelHeading">@using (Html.BeginForm("authorSearch", "Authors", FormMethod.Get))
             {
         <div class="row">
 
